--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@mapbox/mapbox-sdk": "^0.12.1",
+    "@maptiler/client": "^1.8.1",
     "cloudinary": "^1.25.1",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^4.4.1",
