--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "connect-mongo": "^4.4.1",
     "dotenv": "^9.0.0",
     "ejs": "^3.1.6",
-    "ejs-mate": "^3.0.0",
+    "ejs-mate": "^4.0.0",
     "express": "^4.17.1",
     "express-mongo-sanitize": "^2.1.0",
     "express-session": "^1.17.1",
@@ -25,11 +25,12 @@
     "method-override": "^3.0.0",
     "mongoose": "^5.12.5",
     "morgan": "^1.10.0",
-    "multer": "^1.4.2",
+    "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
-    "passport": "^0.4.1",
+    "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.1.0",
-    "sanitize-html": "^2.4.0"
+    "sanitize-html": "^2.4.0",
+    "usa-states": "^0.0.6"
   }
 }
