--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cloudinary": "^1.25.1",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^4.4.1",
+    "dompurify": "^3.1.7",
     "dotenv": "^9.0.0",
     "ejs": "^3.1.6",
     "ejs-mate": "^4.0.0",
@@ -22,6 +23,7 @@
     "express-session": "^1.17.1",
     "helmet": "^4.6.0",
     "joi": "^17.4.0",
+    "jsdom": "^25.0.1",
     "method-override": "^3.0.0",
     "mongoose": "^5.12.5",
     "morgan": "^1.10.0",
@@ -30,7 +32,6 @@
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.1.0",
-    "sanitize-html": "^2.4.0",
     "usa-states": "^0.0.6"
   }
 }
